--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ li {
 
 li:hover {
   transform: scale(1.02);
-  transition: all .1s ease-in-out;
+  transition: all 2.5s ease-in-out;
 }
 
 li a {
