--- a/css/styles.css
+++ b/css/styles.css
@@ -51,8 +51,8 @@ li {
 }
 
 li:hover {
-  transform: scale(1.02);
-  transition: all 2.5s ease-in-out;
+  transform: scale(5);
+  transition: all .1s ease-in-out;
 }
 
 li a {
